--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Api RestFul com BD e Segurança</title>
 </head>
 <body>
+  <h1>Hello World</h1>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
