correcting post and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Api RestFul com BD e Segurança</title>
 </head>
 <body>
-  <h1>Hello World</h1>
+  <h1>Seja bem-vindo à nosso site</h1>
   <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
